feat(cli): add REPL support and output formatting options
- Implemented a REPL (Read-Eval-Print Loop) for interactive database commands.
- Introduced output formatting options (JSON, CSV, Table) for query results.
- Added functions for rendering query results in various formats.
- Created tests for CLI commands, including execution, schema introspection, and REPL functionality.
- Added performance benchmarks for various database operations.
- Documented binding compatibility matrix for language bindings.